k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: client-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            component: web1
    template:
        metadata:
            labels:
                component: web1
        spec:
            containers:
                - name: client
                  image: boneb/ocene:light
                  ports:
                      - containerPort: 3000
