k8s/client2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: client2-deployment
spec:
    replicas: 3
    selector:
        matchLabels:
            component: web
    template:
        metadata:
            labels:
                component: web
        spec:
            containers:
                - name: client
                  image: boneb/ocene:dark
                  ports:
                      - containerPort: 3000
