k8s/go-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        app: hello
    name: hello
spec:
    replicas: 3
    selector:
        matchLabels:
            app: hello
    strategy:
        rollingUpdate:
            maxSurge: 25%
            maxUnavailable: 25%
        type: RollingUpdate
    template:
        metadata:
            labels:
                app: hello
                version: v1
        spec:
            containers:
                - image: boneb/go_multi
                  imagePullPolicy: IfNotPresent
                  name: hello
                  ports:
                      - containerPort: 8081
            restartPolicy: Always
            terminationGracePeriodSeconds: 30
