k8s/go_service.yaml
apiVersion: v1
kind: Service
metadata:
    name: go-ip
spec:
    type: ClusterIP
    selector:
        component: webGo
    ports:
        - port: 8081
          targetPort: 8081
